--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
         </div>
         <div class="right">
             <div class="topbutton">
-                <input class="btn1" value="登录">
-                <input class="btn2" value="注册">
+                <input type="button" class="btn1" value="登录">
+                <input type="button" class="btn2" value="注册">
             </div>
             <div class="list1">
                 <div class="ex">
