--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
         </div>
         <div class="right">
             <div class="topbutton">
-                <input type="button" class="btn1" value="登录" onclick="window.location.href('userlogin.html')">
-                <input type="button" class="btn2" value="注册" onclick="window.location.href('userregister.html')">
+                <input type="button" class="btn1" value="登录" onclick="window.location.href='userlogin.html'">
+                <input type="button" class="btn2" value="注册" onclick="window.location.href='userregister.html'">
             </div>
             <div class="list1">
                 <div class="ex">
